{
  "version": 4,
  "terraform_version": "1.5.1",
  "serial": 78,
  "lineage": "5d810dc9-472f-f1cc-7313-9b410c99ff2b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "gitlab-srv",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c65adc9a5c1b5d7c",
            "arn": "arn:aws:ec2:us-west-2:030352684901:instance/i-0c74a3e7b18137e1a",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c74a3e7b18137e1a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "my_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0029beabe4035cc10",
            "private_dns": "ip-10-0-1-102.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.102",
            "public_ip": "35.90.241.199",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f61fef778b801723",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0eca1c2153216f58d",
            "tags": {
              "Name": "Gitlab-server"
            },
            "tags_all": {
              "Name": "Gitlab-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04926918079ebea7d"
            ]
          },
          "dependencies": [
            "aws_key_pair.my_key",
            "aws_security_group.allow_ssh",
            "aws_subnet.subnet_1_public",
            "aws_vpc.my_test_infrastructure"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my_test_infrastructure_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:030352684901:internet-gateway/igw-0737bd27cb068ce4f",
            "id": "igw-0737bd27cb068ce4f",
            "owner_id": "030352684901",
            "tags": {
              "Name": "my_test_infrastructure_gw"
            },
            "tags_all": {
              "Name": "my_test_infrastructure_gw"
            },
            "vpc_id": "vpc-04605aec1c5ce2c77"
          },
          "dependencies": [
            "aws_vpc.my_test_infrastructure"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "my_test_infrastructure_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:030352684901:route-table/rtb-033b1f40a58990462",
            "id": "rtb-033b1f40a58990462",
            "owner_id": "030352684901",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0737bd27cb068ce4f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "my_test_infrastructure_route"
            },
            "tags_all": {
              "Name": "my_test_infrastructure_route"
            },
            "timeouts": null,
            "vpc_id": "vpc-04605aec1c5ce2c77"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.my_test_infrastructure_gw",
            "aws_vpc.my_test_infrastructure"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:030352684901:security-group/sg-04926918079ebea7d",
            "description": "Allow ssh inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04926918079ebea7d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_ssh",
            "name_prefix": "",
            "owner_id": "030352684901",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg-allow_ssh"
            },
            "tags_all": {
              "Name": "sg-allow_ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-04605aec1c5ce2c77"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my_test_infrastructure"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_1_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:030352684901:subnet/subnet-0eca1c2153216f58d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0eca1c2153216f58d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "030352684901",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet_1_public"
            },
            "tags_all": {
              "Name": "subnet_1_public"
            },
            "vpc_id": "vpc-04605aec1c5ce2c77"
          },
          "dependencies": [
            "aws_vpc.my_test_infrastructure"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_2_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:030352684901:subnet/subnet-0f2cc2766b6383463",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f2cc2766b6383463",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "030352684901",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet_2_private"
            },
            "tags_all": {
              "Name": "subnet_2_private"
            },
            "vpc_id": "vpc-04605aec1c5ce2c77"
          },
          "dependencies": [
            "aws_vpc.my_test_infrastructure"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_test_infrastructure",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:030352684901:vpc/vpc-04605aec1c5ce2c77",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c86a505c106a2139",
            "default_route_table_id": "rtb-0d884cc88c76676f6",
            "default_security_group_id": "sg-0c57f3464e3d0e469",
            "dhcp_options_id": "dopt-0fb3acc89b1eebecd",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04605aec1c5ce2c77",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d884cc88c76676f6",
            "owner_id": "030352684901",
            "tags": {
              "Name": "my_test_infrastructure"
            },
            "tags_all": {
              "Name": "my_test_infrastructure"
            }
          }
        }
      ]
    }
  ]
}